[package]
name = "hello_world"
version = "0.1.0"
authors = ["AndonMitev <mitevandon94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.6"
thiserror = "1.0"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"


[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]