[package]
name = "hello_world"
version = "0.1.0"
authors = ["AndonMitev <mitevandon94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
solana-program = "=1.7.1"
thiserror = "1.0"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
serde = "1.0.126"
sha2 = "0.9.5"
hex = "0.4.3"

[dev-dependencies]
solana-program-test = "=1.7.1"
solana-sdk = "=1.7.1"


[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]